Revision history for {{$dist->name}}

{{$NEXT}}
          "dzil listdeps --missing" no longer dies if it encounters an invalid
          $VERSION (Jesse Luehrs)

4.200012  2011-07-18 09:02:09 America/New_York
          allow abstracts of more than one line, or with more than one word
          before the dash, to be properly extracted (Florian Ragwitz)

          stringify tarball name to work with older Archive::Tar (Jan Tore
          Morken)

4.200011  2011-07-14 22:53:34 America/New_York
          move the file mode setting into the tar creation, not a fixup step

4.200010  2011-07-14 22:27:46 America/New_York
          fix [rt.cpan.org #68223] -- Test::Dzil built tarballs with bad root
          dirs;  test and code mostly provided by Rob Hoelz

4.200009  2011-07-06 23:26:09 America/New_York
          the "skip" argument to AutoPrereqs can now be given multiple times

          authordeps now makes a rough attempt to deal with [@Filter]

          catch and simplify "no dist.ini" errors from MVP

          UploadToCPAN now takes a "upload_uri" option

          UploadToCPAN will now prompt for credentials if needed

          add follow_symlinks to GatherDir (thanks, Luc St-Louis)

4.200008  2011-06-23 11:53:56 America/New_York
          PodVersion no longer drops the file's last newline

          listdeps now includes recommended prereqs as well as required

4.200007  2011-06-01 21:52:00 America/New_York

          always numify the version use in "use VERSION" in Makefile.PL

4.200006  2011-04-28 21:14:04 America/New_York

          MakeMaker-generated Makefile.PL now only has configure_requires of
          6.30 so dists can be installed on RHEL5

          improve consistency and options of *_TESTING env vars (Apocalypse)

          improve FileFinder-related documentation (thanks, Apocalypse)

          add a default file finder called :IncModules (thanks, Apocalypse)

          add a default file finder called :MainModule (thanks, Mateu X.